--- a/LoginApplication/Views/Shared/_Layout.cshtml
+++ b/LoginApplication/Views/Shared/_Layout.cshtml
@@ -18,7 +18,19 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 justify-content-end">
+                        @if (Login.GetSession() == null)
+						{
+							<li class="nav-item">
+								<a class="nav-link text-dark" asp-area="" asp-controller="Login" asp-action="Index">Login</a>
+							</li>
+						}
+						else
+						{
+							<li class="nav-item ">
+								<a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="LogOut">Log out</a>
+							</li>
+						}
                     </ul>
                 </div>
             </div>
