--- a/LoginApplication/Views/Users/Index.cshtml
+++ b/LoginApplication/Views/Users/Index.cshtml
@@ -8,5 +8,5 @@
 <h2>Welcome, @session.Username!</h2>
 
 <p>
-	<a asp-action="LogOut" class="btn btn-outline-secondary mt-5">Log out</a>
+	You are logged in!
 </p>
