--- a/LoginApplication/Views/Users/Edit.cshtml
+++ b/LoginApplication/Views/Users/Edit.cshtml
@@ -24,7 +24,7 @@
 				<span asp-validation-for="IsAdmin" ></span>
 			</div>
 			<div class="form-group mt-3">
-				<input type="submit" value="Save" class="btn btn-primary" />
+				<input type="submit" value="Save" class="btn btn-success" />
 				<a asp-action="Index" class="btn btn-outline-secondary ms-2">Back to List</a>
 			</div>
 		</form>
