--- a/LoginApplication/Views/Users/Register.cshtml
+++ b/LoginApplication/Views/Users/Register.cshtml
@@ -26,7 +26,7 @@
 				<span class="text-danger" data-valmsg-for="confirmPassword" data-valmsg-replace="true"></span>
 			</div>
 			<div class="form-group mt-3">
-				<input type="submit" value="Sign Up" class="btn btn-primary" />
+				<input type="submit" value="Sign Up" class="btn btn-dark" />
 				<a asp-action="Index" class="btn btn-outline-secondary ms-2">Go back to login</a>
 			</div>
 
