--- a/LoginApplication/Views/Shared/_Notification.cshtml
+++ b/LoginApplication/Views/Shared/_Notification.cshtml
@@ -3,14 +3,26 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 	<script type="text/javascript">
-		toastr.success("@TempData["success"]", "Successful")
-
 		toastr.options = {
 			"closeButton": true,
+			"debug": false,
+			"newestOnTop": true,
 			"progressBar": true,
+			"positionClass": "toast-top-right",
 			"preventDuplicates": true,
-			"newestOnTop": true
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
 		}
+
+		toastr.success("@TempData["success"]", "Success")
+
 	</script>
 
 	
@@ -20,13 +32,24 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 	<script type="text/javascript">
-		toastr.error("@TempData["success"]", "Error")
-
 		toastr.options = {
 			"closeButton": true,
+			"debug": false,
+			"newestOnTop": true,
 			"progressBar": true,
+			"positionClass": "toast-top-right",
 			"preventDuplicates": true,
-			"newestOnTop": true
+			"onclick": null,
+			"showDuration": "300",
+			"hideDuration": "1000",
+			"timeOut": "5000",
+			"extendedTimeOut": "1000",
+			"showEasing": "swing",
+			"hideEasing": "linear",
+			"showMethod": "fadeIn",
+			"hideMethod": "fadeOut"
 		}
+
+		toastr.error("@TempData["error"]", "Error")
 	</script>
 }
