--- a/LoginApplication/Views/Users/Edit.cshtml
+++ b/LoginApplication/Views/Users/Edit.cshtml
@@ -4,7 +4,7 @@
 	ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit User</h2>
 
 <hr />
 
@@ -19,7 +19,7 @@
 				<span asp-validation-for="Username" class="text-danger"></span>
 			</div>
 			<div class="form-group mt-2">
-				<label asp-for="IsAdmin" class="control-label"></label>
+				<label asp-for="IsAdmin" class="control-label">Admin</label>
 				<input asp-for="IsAdmin" class="form-check-input ms-2" type="checkbox" />
 				<span asp-validation-for="IsAdmin" ></span>
 			</div>
